--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ h1 {font: size 600px;
 }
 body{background-color: rgb(142, 64, 216);
 }
-h2{background-color: rgba(122, 29, 209, 0.925);
+h2{background-color: rgb(142, 64, 216) ;
 }
 title{font-size: 200px;
 }
-title{background-color: rgb(73, 32, 112);
+title{background-color: rgb(126, 76, 173);
 }
 img{display: left: 500px;
 }
