--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 h1 {font: size 600px;
 }
-body{background-color: rgb(142, 64, 216);
+body{background-color: rgb(142, 64, 216); text-align: center;
 }
 h2{background-color: rgb(142, 64, 216) ;
 }
